modifica estrutura de listas usada